# langchain-rag-learning

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  QUICKSTART.md  README.md  add_comments_to_all_files.py  docker-compose.dev.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_environment.py  test_navigation.py  validate_llm_system.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  security.yml
.kiro/specs/langchain-rag-learning-project/: design.md  requirements.md  tasks.md
config/: llm_providers.yaml
docs/: API_TECHNICAL_GUIDE.md  RAG_SYSTEM_TECHNICAL_GUIDE.md  README.md  TECHNICAL_DOCUMENTATION.md
scripts/: README.md
src/langchain_rag_learning/: __init__.py
src/langchain_rag_learning/api/: main.py
src/langchain_rag_learning/core/: __init__.py  config.py  config_commented.py  exceptions.py  logging.py  models.py  monitoring.py  utils.py
src/langchain_rag_learning/learning/: __init__.py
src/langchain_rag_learning/llm/: __init__.py  cache.py  manager.py  providers.py  templates.py
src/langchain_rag_learning/rag/: __init__.py  document_processor.py  embeddings.py  retrievers.py  text_splitter.py  vector_store.py
src/langchain_rag_learning/ui/: __init__.py  main.py
tests/: __init__.py
tests/integration/: test_document_processing_pipeline.py  test_llm_integration.py  test_retrieval_pipeline.py
tests/performance/: test_llm_performance.py
tests/unit/: test_document_processor.py  test_embeddings.py  test_llm_manager.py  test_llm_providers.py  test_llm_templates.py  test_retrievers.py  test_text_splitter.py
